--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <!-- define angular app -->
@@ -20,7 +21,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Angular Routing code</a>
+        <a class="navbar-brand" href="/">Angular Routing Example</a>
       </div>
 
       <ul class="nav navbar-nav navbar-right">
@@ -33,15 +34,12 @@
 
   <div id="main">
   
+    <!-- angular templating -->
+		<!-- this is where content will be injected -->
     <div ng-view></div>
     
   </div>
   
-  <footer class="text-center">
-    <p>View the tutorial on <a href="http://scotch.io/tutorials/javascript/single-page-apps-with-angularjs-routing-and-templating">Scotch.io</a></p>
-  
-    <p>View a tutorial on <a href="http://scotch.io/tutorials/javascript/animating-angularjs-apps-ngview">Animating Your Angular Single Page App</a></p>
-  </footer>
   
 </body>
 
