--- a/home.html
+++ b/home.html
@@ -1,5 +1,101 @@
-<div class="jumbotron text-center">
-	<h1>Home Page</h1>
-	
-	<p>{{ message }}</p>
+<style>
+td{
+padding:1vw;
+color:white;
+font-size:1.5vw;
+}
+</style>
+<div style="padding-left:8vw;padding-right:8vw;">
+<link href='https://fonts.googleapis.com/css?family=Michroma' rel='stylesheet'>
+<h2 style="font-family:Michroma;font-size:1.5em;text-align:center;">
+	A little about me !
+</h2>
+<p style="font-family:Michroma;font-size:1em;text-align:justify;">
+	My name is Vaibhav Roy. I graduated from <b>The Pennsylvania State University</b> with a MS degree in Information Stytems. I have over 5 years of experience in Developing and designing Websites on numerous platforms. I believe creating a User Interface which should be vibrant, eye catching and beautiful. I have expertise in <b>designing, mock-ups, wire framming, User Experience Research and developing using HTML5, CSS3 and JavaScript Libraries</b>. In short I am both <b>UI UX Designer and Developer </b>
+</p>
+<br>
+<div class="row">
+  <div class="col-sm-4" style="font-family:Michroma;background-color:rgba(0,0,0,0.4);padding:1vw;">
+  <span style="color:#00FF00;font-size:1.5em;text-align:center;"> UI / Front-End Developer </span><br><br>
+<span style="text-align:justify;color:white;">I create responsive websites that allow the user to experience the website in the best and most appropriate way suited to the device they are using. By working using progressive enhancement, your website is delivered with a responsive layout that can best make use of the space available on the smallest to largest devices. Cross browser compatibility is ensured by using feature detection so older browsers still in use today provide a solid experience, whilst modern browsers can go the next step and enhance a user’s time spent on your site.
+</span>
+  </div>
+ <div class="col-sm-4" style="font-family:Michroma;background-color:rgba(0,0,0,0.4);padding:1vw;">
+  <span style="color:#00FF00;font-size:1.5em;text-align:center;"> UI UX Designer </span><br><br>
+<span style="text-align:justify;color:white;text-align:justify;">
+For all the companies I have worked I have been worked as both Designer and a Developer. I talked to the clients, and would come up with the client's design requirements using Photoshop, Illustrator or Balsamiq. The designing will the done and would be presented to the client for approval once that it done, I would go to the Development phase. 
+</span>
+  </div>
+  <div class="col-sm-4" style="font-family:Michroma;background-color:rgba(0,0,0,0.4);padding:1vw;">
+  <span style="color:#00FF00;font-size:1.5em;text-align:center;"> Skills </span><br><br>
+<table>
+	<tr>
+		<td>
+			<b>Design Skills</b>
+		</td>
+		<td>
+			User Interface, User Experience, Development & Design, graphic design, Responsive Web Design, Visual Design
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<b>UX Design</b>
+		</td>
+		<td>
+			Wire framing , Mock-ups,  Web UX Design, Sketching, Visio, Photoshop
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<b>Web Technologies</b>
+		</td>
+		<td>
+			HTML4/5, CSS2/3, JSON, Ajax, XML, JavaScript, JQuery, JQuery UI, JQuery Mobile, Angular JS, Bootstrap. CMS: WordPress, Adobe Experience Management (AEM)
+		</td>
+	</tr>
+	<tr>
+		<td><b>UI Frameworks</b></td>
+		<td>
+			Angular JS, JQuery, JQuery UI , Bootstrap, JAVAScript, Unit Testing on Jasmine, HTML5, CSS3, SCSS, OOCSS
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<b>Scripting Language</b>
+		</td>
+		<td>
+			JavaScript, PHP
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<b>Web Services</b>
+		</td>
+		<td>
+			RESTFul API
+		</td>
+	</tr>
+	<tr>
+		<td><b>Databases</b></td>
+		<td>
+			MS SQL Server 2005, MS Access, MySQL, Mango DB.
+		</td>
+	</tr>
+	<tr>
+		<td><b>Open Source</b></td>
+		<td>JUnit, GIT, CVS, SVN, Rational Clear Case, Source Tree and GIT Hub,</td>
+	</tr>
+	<tr>
+		<td>
+			<b>
+				Development/Build Tools
+			</b>
+		</td>
+		<td>
+			Eclipse Kepler/Juno, MyEclipse8.0, RAD, Net beans, Dreamweaver, Sublime Text
+		</td>
+	</tr>
+</table>
+  </div>
+  </div>
 </div>
